--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ flatbuffers==25.2.10
 fsspec==2025.3.0
 google-auth==2.38.0
 googleapis-common-protos==1.69.2
-groq==0.23.1
+groq
 grpcio==1.71.0
 h11==0.14.0
 httpcore==1.0.7
